[Update]Fixed swagger UI
